  * PCL is now smarter about SLOT-VALUE, (SETF SLOT-VALUE) and
    SLOT-BOUNDP: in particular, it is now able to optimize them much
    better, and is now not vulnerable to having packages renamed.
    Furthermore, a compliance bug has been fixed: SLOT-MISSING is now
    always called when a slot is not present in an instance.  (thanks
    to Gerd Moellmann)
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** ARRAY-IN-BOUNDS-P now allows arbitrary integers as arguments,
       not just nonnegative fixnums;
    ** the logical bit-array operators such as BIT-AND now accept an
       explicit NIL for their "opt-arg" argument (to indicate a
       freshly-consed result bit-array);
    ** ELT now signals an error on an invalid sequence index in safe
       code;
    ** the type system is now cleverer about negations of numeric
       types, and consequently understands the BIGNUM and RATIO types
       better;
    ** the type system is now cleverer about the interaction between
       INTEGER and RATIO types: while bugs still remain, many more
       cases are accurately computed;
    ** in TYPECASE, OTHERWISE now only introduces an otherwise-clause
       if it is in the last clause;
    ** CONSTANTLY now correctly returns a side-effect-free function in
       all cases;
    ** DECLARE is no longer treated as a special-operator; in
       particular, SPECIAL-OPERATOR-P no longer returns T for DECLARE;

planned incompatible changes in 0.7.x:
  * (not done yet, but planned:) When the profiling interface settles
    down, maybe in 0.7.x, maybe later, it might impact TRACE. They both
    encapsulate functions, and it's not clear yet how e.g. UNPROFILE
    will interact with TRACE
    and UNTRACE. (This shouldn't matter, though, unless you are
    using profiling. If you never profile anything, TRACE should
    continue to behave as before.)
  * (not done yet, but planned:) Inlining can now be controlled the
    ANSI way, without MAYBE-INLINE, since the idiom